# corsica

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  app.py  app.yaml  exponential.py  main.py  normal.py  pyproject.toml  requirements.txt  uniform.py
.deta/: prog_info  state  tokens
.github/workflows/: deploy.yml  pipeline.yml
corsica/: distributions.py
templates/: home.html
tests/: test_e2e.py  test_normal.py  test_single_value.py
tests/unit/: test_exponential.py  test_normal.py  test_uniform.py
