[tool.poetry]
name = "corsica"
version = "0.1.0"
description = ""
authors = ["joshgrant <joshua.m.grant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = "*"
pytest = "*"
numpy = "*"
requests = "*"
flake8 = "*"
opentelemetry-api = "^1.3.0"
opentelemetry-sdk = "^1.3.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.3.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
