[tool.poetry]
name = "corsica"
version = "0.1.0"
description = ""
authors = ["joshgrant <joshua.m.grant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "*"
pytest = "*"
numpy = "*"
requests = "*"
flake8 = "*"
fastapi = "*"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
